# Chatbot

./: .env.example  .gitignore  README.md  pyproject.toml
dify/: README.md  validate_dsl.py  中国物流智能客服-Demo.yml  中文回归用例.md
dify/场景/催查件/: 催查件MVP-业务Tool.openapi.yaml  催查件MVP-业务Tool设计.md  催查件MVP-回归用例.md
docs/: api-contract.md  architecture.md  dsl-analysis.md  implementation-comparison.md  migration-matrix.md  open-questions.md  three-demo-agent-framework-proposal.md
src/customer_service_agent/: __init__.py  agent.py  config.py  exceptions.py  main.py  prompts.py  router.py  schemas.py  state.py  workflow.py
src/customer_service_agent/adapters/: __init__.py  base.py  http_backend.py  mock_backend.py
src/customer_service_agent/api/: __init__.py  dependencies.py  routes.py
src/customer_service_agent/middleware/: __init__.py  logging.py  resilience.py  security.py
src/customer_service_agent/services/: __init__.py  conversation_service.py  response_service.py  scene_manager.py
src/customer_service_agent/spike/: __init__.py  backend.py  schemas.py  service.py  tools.py
tests/: conftest.py
tests/conversations/: test_contextual_dialogue.py  test_delivered_not_received.py  test_multi_intent.py  test_parameter_modification.py  test_switch_cancel_failure.py  test_tracking.py  test_write_flows.py
tests/fixtures/: dsl_regression_cases.json
tests/integration/: test_api.py  test_dsl_regression.py  test_spike_api.py
tests/unit/: test_agent.py  test_config.py  test_model_routing.py  test_router.py  test_security.py  test_spike_service.py  test_state.py  test_tools.py
(+22 files in other folders)
